# urban_transport_app

./: .gitignore  README.md  main.py  requirements.txt  station_names.json
app/utils/: create_map.py
backend/: pyproject.toml  requirements.txt
backend/app/: gen_routes.py  main.py  route_manager.py  routes_.html
backend/app/api/v1/: api.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/models/: __init__.py  buckets.py  flow_models.py  routes.py
backend/app/services/: A_star.py  Simulated_Annealing.py  __init__.py  hub_selector.py  min_cost_flow_solver.py  mini_metis.py  minimum_cost.py  spfa.py
backend/app/utils/: __init__.py  create_map.py  get_html_map_raw.py  graph_distances.py  multigraph_to_cytoscape_json.py  rand.py  route_demand.py
backend/data/cache/: rm_100nodes_1density.pkl
data/map/: graph_10nodes_1density.gexf  graph_10nodes_30density.gexf  graph_20nodes_30density.gexf  graph_450nodes_1density.gexf  graph_450nodes_30density.gexf
docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: admin.html  index.html  login.html
frontend/pages/: admin.html  index.html  login.html
frontend/scripts/: admin.js  garage_graph.js  graph_worker.js  index.js  login.js
frontend/styles/: admin.css  index.css  login.css  style.css
