[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transport_manager_backend"
version = "0.1.0"
description = "Backend for the public transport manager project"
authors = [
    {name = "Stanislav Cojocari", email = "cs.is.coding@gmail.com"},
    {name = "Sandu Nirca", email = "nircasandu@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "networkx==3.4.2",
    "pydantic>=2.5",
    "python-multipart>=0.0.6",
    "passlib[bcrypt]>=1.7.4",
    "python-jose>=3.3.0",
    "pytest>=7.3.0",
    "python-dotenv>=1.0.0"
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
